Changed app name

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGODB_URI="mongodb+srv://mhossai6:794u1kKFABhHlBBC@cluster0.vw3yiv2.mongodb.ne
 RESEND_API_KEY="re_Srd9qveh_AmikFPf1PxJakCTKG459bC9P"
 NEXTAUTH_SECRET="mosha"
 NODEMAILER_USER="shahriarhossain250@gmail.com"
-NODEMAILER_PASS="tzhwiyjiwoxbozwq"
+NODEMAILER_PASS="fzszgsljfuuxlufw"
