Done with the implementation, have to work on the dashboard

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ RESEND_API_KEY="re_Srd9qveh_AmikFPf1PxJakCTKG459bC9P"
 NEXTAUTH_SECRET="mosha"
 NODEMAILER_USER="shahriarhossain250@gmail.com"
 NODEMAILER_PASS="fzszgsljfuuxlufw"
+OPENAI_API_KEY="sk-proj-1XhY2FG42BjDxl0GQXkdT3BlbkFJoFVnXypxHRhtqx02Jrap"
