--- a/package.json
+++ b/package.json
@@ -17,31 +17,15 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.21",
-    "ai": "^3.2.18",
-    "axios": "^1.7.2",
-    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
-    "dotenv": "^16.4.5",
-    "embla-carousel-autoplay": "^8.1.6",
-    "embla-carousel-react": "^8.1.6",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.404.0",
-    "mongoose": "^8.4.5",
     "next": "14.2.4",
-    "next-auth": "^4.24.7",
-    "nodemailer": "^6.9.14",
-    "openai": "^4.52.4",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "react-email": "^2.1.5",
     "react-hook-form": "^7.52.1",
-    "resend": "^3.4.0",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -49,10 +33,26 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "ai": "^3.2.19",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
+    "embla-carousel-autoplay": "^8.1.6",
+    "embla-carousel-react": "^8.1.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.0",
+    "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.14",
+    "openai": "^4.52.4",
     "postcss": "^8",
+    "react-email": "^2.1.5",
+    "resend": "^3.4.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "usehooks-ts": "^3.1.0",
+    "zod": "^3.23.8"
   }
 }
