--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "shadcn": "^1.0.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
