--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.21",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.3.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.404.0",
     "next": "14.2.4",
+    "next-cloudinary": "^6.6.2",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
