--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18",
     "ai": "^3.2.19",
     "axios": "^1.7.2",
@@ -55,7 +55,7 @@
     "react-email": "^2.1.5",
     "resend": "^3.4.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "typescript": "5.5.4",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   }
